--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -71,8 +71,9 @@
 												class="dropdown-item" role="presentation">Not Active Yet</a>
 										</div>
 									</div>
-									<button onclick=searchupdate() class="btn btn-primary"
-										type="button" style="margin-left: 6px; border-radius: 6px;">Search</button>
+									<button id="searchmain" onclick=searchupdate()
+										class="btn btn-primary" type="button"
+										style="margin-left: 6px; border-radius: 6px;">Search</button>
 									<div class="btn-group ml-auto" role="group">
 										<div class="dropdown d-inline-flex" style="margin: 6px;">
 											<button id="officeButtton"
@@ -89,17 +90,18 @@
 										</div>
 										<form id="upload" enctype="multipart/form-data" method="post"
 											action="./OV/main/import">
-											<button class="btn btn-primary" type="button"
+											<button id="import" class="btn btn-primary" type="button"
 												onclick="openFileDialog();"
 												style="margin: 6px; border-radius: 6px;">Import</button>
-											<input type="file" id="fileLoader"
-												onchange="submitfile()" name="files" title="Load File" />
+											<input type="file" id="fileLoader" onchange="submitfile()"
+												name="files" title="Load File" />
 										</form>
 										<button class="btn btn-primary" type="button"
 											onclick="location.href='./OV/main/export.csv'"
 											style="margin: 6px; border-radius: 6px;">Export</button>
-										<button onclick=logout() class="btn btn-primary" type="button"
-											style="margin: 6px; border-radius: 6px;">Log Out</button>
+										<button id="logout" onclick=logout() class="btn btn-primary"
+											type="button" style="margin: 6px; border-radius: 6px;">Log
+											Out</button>
 									</div>
 								</div>
 							</div>
@@ -114,8 +116,8 @@
 									<table class="table">
 										<thead>
 											<tr>
-												<td onclick = sort(0)>Employee Number</td>
-                                    			<td onclick = sort(1)>Full Name</td>
+												<td onclick=sort(0)>Employee Number</td>
+												<td onclick=sort(1)>Full Name</td>
 												<td>Status</td>
 											</tr>
 										</thead>
@@ -172,39 +174,42 @@
 															</tr>
 														</tbody>
 													</table>
-                                                    <p id="payratestatus"></p>
+													<p id="payratestatus"></p>
 												</div>
 											</div>
 											<div class="modal-footer">
 												<button onclick=newPayrtField()
-													class="btn btn-primary mr-auto" type="button">Add New Payrate</button>
-												<button class="btn btn-light" type="button" data-dismiss="modal" onclick=$("#payratestatus").html("")>Close</button>
+													class="btn btn-primary mr-auto" type="button">Add
+													New Payrate</button>
+												<button class="btn btn-light" type="button"
+													data-dismiss="modal" onclick=$( "#payratestatus").html("")>Close</button>
 												<button onclick=saveChanges() class="btn btn-primary"
 													type="button">Save</button>
 											</div>
 										</div>
 									</div>
-                                </div>
-                                <div class="modal fade" role="dialog" tabindex="-1" id="importpopup">
-                                    <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h4 id="importtitle" class="modal-title">Import status</h4>
-                                                <button type="button" class="close" data-dismiss="modal"
-                                                        aria-label="Close">
-                                                    <span aria-hidden="true">x</span>
-                                                </button>
-                                            </div>
-                                            <div id="importbody" class="modal-body" style="padding: 0;">
-                                                <p id="importstatus">Import</p>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button class="btn btn-primary" type="button"
-                                                        data-dismiss="modal">Close</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+								</div>
+								<div class="modal fade" role="dialog" tabindex="-1"
+									id="importpopup">
+									<div class="modal-dialog" role="document">
+										<div class="modal-content">
+											<div class="modal-header">
+												<h4 id="importtitle" class="modal-title">Import status</h4>
+												<button type="button" class="close" data-dismiss="modal"
+													aria-label="Close">
+													<span aria-hidden="true">x</span>
+												</button>
+											</div>
+											<div id="importbody" class="modal-body" style="padding: 0;">
+												<p id="importstatus">Import</p>
+											</div>
+											<div class="modal-footer">
+												<button class="btn btn-primary" type="button"
+													data-dismiss="modal">Close</button>
+											</div>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
