typo on line 79

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -76,7 +76,7 @@
 										style="margin-left: 6px; border-radius: 6px;">Search</button>
 									<div class="btn-group ml-auto" role="group">
 										<div class="dropdown d-inline-flex" style="margin: 6px;">
-											<button id="officeButtton"
+											<button id="officeButton"
 												class="btn btn-primary dropdown-toggle"
 												data-toggle="dropdown" aria-expanded="false" type="button"
 												style="margin-right: 6px; margin-left: 6px; border-radius: 6px; padding-left: 20px;">Office</button>
