front end of sorting tables(icon, hover)

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -111,11 +111,11 @@
 						<div class="card">
 							<div class="card-body" style="padding: 0px;">
 								<div class="table-responsive table-hover">
-									<table class="table">
+									<table id = "empTable" class="table">
 										<thead>
 											<tr>
-												<td onclick = sort(0)>Employee Number</td>
-                                    			<td onclick = sort(1)>Full Name</td>
+												<td id = "hovernum" style = "font-size:16px;" onclick = sort(0)>Employee Number<i id = "numSort" class="fas fa-sort fa-fw" style="vertical-align: middle; font-size:18px;"></i></td>
+                                    			<td id = "hovername" style = "font-size:16px;" onclick = sort(1)>Full Name<i id = "nameSort" class="fas fa-sort fa-fw" style="vertical-align: middle; font-size:18px;"></i></td>
 												<td>Status</td>
 											</tr>
 										</thead>
@@ -350,7 +350,6 @@
 
 				var edit = document.createElement("td");
 				var editIcon = document.createElement("span");
-				editIcon.id = "editaa";
 				editIcon.className = "fas fa-pencil-alt";
 				editIcon.setAttribute("onclick", "edit(" + i + ")");
 				edit.appendChild(editIcon);
@@ -365,7 +364,6 @@
 				ver.appendChild(trash);
 
 				body.appendChild(ver);
-				console.log(document.getElementById("editaa"));
 				$("#payratestatus").html("");
 			}
 		}
@@ -470,18 +468,28 @@
 		}
 		
 		function sort(n) {
+			var sortnum = document.getElementById("numSort");
+			var sortname = document.getElementById("nameSort");
 			if(n == 0 && ascNum == false) {
 				xhr.open("GET", "./OV/main/sort/00");
 				ascNum = true;
+				sortnum.className = "fas fa-sort-up fa-fw";
+				sortname.className = "fas fa-sort fa-fw";
 			} else if(n == 0 && ascNum == true) {
 				xhr.open("GET", "./OV/main/sort/01");
 				ascNum = false;
+				sortnum.className = "fas fa-sort-down fa-fw";
+				sortname.className = "fas fa-sort fa-fw";
 			} else if(n == 1 && ascName == false) {
 				xhr.open("GET", "./OV/main/sort/10");
 				ascName = true;
+				sortname.className = "fas fa-sort-up fa-fw";
+				sortnum.className = "fas fa-sort fa-fw";
 			} else if(n == 1 && ascName == true) {
 				xhr.open("GET", "./OV/main/sort/11");
 				ascName = false;
+				sortname.className = "fas fa-sort-down fa-fw";
+				sortnum.className = "fas fa-sort fa-fw";
 			}
 			xhr.send();
 		}
