add id to export button on main.html

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -96,7 +96,7 @@
 											<input type="file" id="fileLoader" onchange="submitfile()"
 												name="files" title="Load File" />
 										</form>
-										<button class="btn btn-primary" type="button"
+										<button id="export" class="btn btn-primary" type="button"
 											onclick="location.href='./OV/main/export.csv'"
 											style="margin: 6px; border-radius: 6px;">Export</button>
 										<button id="logout" onclick=logout() class="btn btn-primary"
