--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -363,6 +363,7 @@
 
 				var edit = document.createElement("td");
 				var editIcon = document.createElement("span");
+				editIcon.style = "cursor:pointer;"
 				editIcon.className = "fas fa-pencil-alt";
 				editIcon.setAttribute("onclick", "edit(" + i + ")");
 				edit.appendChild(editIcon);
@@ -371,13 +372,15 @@
 				// create trash icon
 				var trash = document.createElement("td");
 				var trashIcon = document.createElement("span");
-				trash.className = "fas fa-trash-alt";
-				trash.setAttribute("onclick", "deletePayrate(" + i + ")");
+				trashIcon.style = "cursor:pointer;"
+				trashIcon.className = "fas fa-trash-alt";
+				trashIcon.setAttribute("onclick", "deletePayrate(" + i + ")");
 				trash.appendChild(trashIcon);
 				ver.appendChild(trash);
 
 				body.appendChild(ver);
 				$("#payratestatus").html("");
+				console.log(ver);
 			}
 		}
 
@@ -627,14 +630,20 @@
 		}
 
 		function deletePayrate(i) {
-			var delelem = document.getElementById('infotable').children[i];
-			document.getElementById('infotable').removeChild(delelem);
-			
-			var row = document.getElementById('infotable').children;
-			for(l = 0; l < row.length; l++) {
-				row[l].children[3].children[0].setAttribute('onclick', "edit(" + l + ")");
-				row[l].children[4].children[0].setAttribute('onclick', "deletePayrate(" + l + ")");
-			} 
+			var result = confirm('Are you sure you want to delete this payrate?');
+			if(result) {
+				var delelem = document.getElementById('infotable').children[i];
+				document.getElementById('infotable').removeChild(delelem);
+				
+				var row = document.getElementById('infotable').children;
+				for(l = 0; l < row.length; l++) {
+					row[l].children[3].children[0].setAttribute('onclick', "edit(" + l + ")");
+					row[l].children[4].children[0].setAttribute('onclick', "deletePayrate(" + l + ")");
+				}
+				saveChanges();
+			} else {
+				return;
+			}
 		}
 
 		$("#menu-toggle").click(function(e) {
