redirect to ovsoftware website when logo clicked

--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -235,7 +235,7 @@
         }
     }
 
-
+	// update google account table
     function updateGoogleAccount() {
         var body = document.getElementById('GoogleAccountList');
         body.innerHTML = "";
