--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -346,6 +346,7 @@
 			}
 		}
 
+		// update payrate table
 		function updateinfo() {
 			var body = document.getElementById('infotable');
 			body.innerHTML = "";
