--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -52,12 +52,11 @@
 										<div class="bar3"></div>
 									</div>
 									<a href = "https://www.ovsoftware.nl/">
-									<img src="assets/img/OV.png"
-										style="height: 80px; margin-right: 12px;"><input
+									<img src="assets/img/OV.png" style="height: 80px; margin-right: 12px;"></a>
+										<input
 										id="searchid" type="text" placeholder="Employee Number"
 										style="margin: 6px;"><input id="searchname"
 										type="text" placeholder="Full Name" style="margin: 6px;">
-									</a>
 									<div class="dropdown d-inline-flex">
 										<button id="statusButton"
 											class="btn btn-primary dropdown-toggle"
@@ -236,7 +235,7 @@
 		var elem1;
 		var elem2;
 		var elem3;
-		var ascNum = false;
+		var ascNum = true;
 		var ascName = false;
 		var rowNum = -1;
 		var xhr = new XMLHttpRequest();
