Avoid errors on database assignment

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -239,7 +239,7 @@
 		var ascName = false;
 		var rowNum = -1;
 		var xhr = new XMLHttpRequest();
-		var rqueue = ["./OV/main/databases", "./OV/test", "./OV/main/employees"];
+		var rqueue = ["./OV/test", "./OV/main/databases", "./OV/main/employees"];
 		var rcounter = 0;
 		xhr.onload = function() {
 			if (xhr.readyState == 4 && xhr.status == 200) {
