--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -26,7 +26,7 @@
 </head>
 
 <body onload="requestContent()">
-	<div id="wrapper" style = "cursor:pointer;">
+	<div id="wrapper">
 		<!-- Sidebar -->
 		<div id="sidebar-wrapper">
 			<ul class="sidebar-nav">
