--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -325,19 +325,19 @@
 		}
 
 		function searchupdate() {
-			let crdnr = document.getElementById("searchid").value;
-			let fullname = document.getElementById("searchname").value;
+			crdnr = document.getElementById("searchid").value;
+			fullname = document.getElementById("searchname").value;
 			if (crdnr != "" && fullname != "") {
 				xhr.open("GET", "./OV/main/search/" + crdnr + "/" + fullname
-						+ "/status/" + status);
+						+ "/status/" + status + "/sort/-1");
 				xhr.send();
 			} else if (crdnr == "" && fullname != "") {
 				xhr.open("GET", "./OV/main/search/" + -1 + "/" + fullname
-						+ "/status/" + status);
+						+ "/status/" + status + "/sort/-1");
 				xhr.send();
 			} else if (crdnr != "" && fullname == "") {
 				xhr.open("GET", "./OV/main/search/" + crdnr + "/" + -1
-						+ "/status/" + status);
+						+ "/status/" + status + "/sort/-1");
 				xhr.send();
 			} else if (crdnr == "" && fullname == "") {
 				return;
@@ -490,23 +490,35 @@
 		function sort(n) {
 			var sortnum = document.getElementById("numSort");
 			var sortname = document.getElementById("nameSort");
+			let crdnr = document.getElementById("searchid").value;
+			let fullname = document.getElementById("searchname").value;
+			if(crdnr == "") {
+				crdnr = -1;
+			}
+			if (fullname == "") {
+				fullname = -1;
+			}
 			if(n == 0 && ascNum == false) {
-				xhr.open("GET", "./OV/main/sort/00");
+				xhr.open("GET", "./OV/main/search/" + crdnr + "/" + fullname
+						+ "/status/" + status + "/sort/00");
 				ascNum = true;
 				sortnum.className = "fas fa-sort-up fa-fw";
 				sortname.className = "fas fa-sort fa-fw";
 			} else if(n == 0 && ascNum == true) {
-				xhr.open("GET", "./OV/main/sort/01");
+				xhr.open("GET", "./OV/main/search/" + crdnr + "/" + fullname
+						+ "/status/" + status + "/sort/01");
 				ascNum = false;
 				sortnum.className = "fas fa-sort-down fa-fw";
 				sortname.className = "fas fa-sort fa-fw";
 			} else if(n == 1 && ascName == false) {
-				xhr.open("GET", "./OV/main/sort/10");
+				xhr.open("GET", "./OV/main/search/" + crdnr + "/" + fullname
+						+ "/status/" + status + "/sort/10");
 				ascName = true;
 				sortname.className = "fas fa-sort-up fa-fw";
 				sortnum.className = "fas fa-sort fa-fw";
 			} else if(n == 1 && ascName == true) {
-				xhr.open("GET", "./OV/main/sort/11");
+				xhr.open("GET", "./OV/main/search/" + crdnr + "/" + fullname
+						+ "/status/" + status + "/sort/11");
 				ascName = false;
 				sortname.className = "fas fa-sort-down fa-fw";
 				sortnum.className = "fas fa-sort fa-fw";
@@ -532,20 +544,20 @@
 
 		function statusFilterA() {
 			status = document.getElementById("statusA").getAttribute("value");
-			let crdnr = document.getElementById("searchid").value;
-			let fullname = document.getElementById("searchname").value;
+			crdnr = document.getElementById("searchid").value;
+			fullname = document.getElementById("searchname").value;
 			if (crdnr != "" && fullname != "") {
-				xhr.open("GET", "./OV/main/status/A/search/" + crdnr + "/"
-						+ fullname);
+				xhr.open("GET", "./OV/main/search/" + crdnr + "/" + fullname
+						+ "/status/A/sort/-1");
 			} else if (crdnr == "" && fullname != "") {
-				xhr.open("GET", "./OV/main/status/A/search/" + -1 + "/"
-						+ fullname);
+				xhr.open("GET", "./OV/main/search/" + -1 + "/" + fullname
+						+ "/status/A/sort/-1");
 			} else if (crdnr != "" && fullname == "") {
-				xhr
-						.open("GET", "./OV/main/status/A/search/" + crdnr + "/"
-								+ -1);
+				xhr.open("GET", "./OV/main/search/" + crdnr + "/" + -1
+						+ "/status/A/sort/-1");
 			} else {
-				xhr.open("GET", "./OV/main/status/A/search/" + -1 + "/" + -1);
+				xhr.open("GET", "./OV/main/search/" + -1 + "/" + -1
+						+ "/status/A/sort/-1");
 			}
 			xhr.send();
 		}
@@ -555,17 +567,17 @@
 			let crdnr = document.getElementById("searchid").value;
 			let fullname = document.getElementById("searchname").value;
 			if (crdnr != "" && fullname != "") {
-				xhr.open("GET", "./OV/main/status/I/search/" + crdnr + "/"
-						+ fullname);
+				xhr.open("GET", "./OV/main/search/" + crdnr + "/" + fullname
+						+ "/status/I/sort/-1");
 			} else if (crdnr == "" && fullname != "") {
-				xhr.open("GET", "./OV/main/status/I/search/" + -1 + "/"
-						+ fullname);
+				xhr.open("GET", "./OV/main/search/" + -1 + "/" + fullname
+						+ "/status/I/sort/-1");
 			} else if (crdnr != "" && fullname == "") {
-				xhr
-						.open("GET", "./OV/main/status/I/search/" + crdnr + "/"
-								+ -1);
+				xhr.open("GET", "./OV/main/search/" + crdnr + "/" + -1
+						+ "/status/I/sort/-1");
 			} else {
-				xhr.open("GET", "./OV/main/status/I/search/" + -1 + "/" + -1);
+				xhr.open("GET", "./OV/main/search/" + -1 + "/" + -1
+						+ "/status/I/sort/-1");
 			}
 			xhr.send();
 		}
@@ -575,17 +587,17 @@
 			let crdnr = document.getElementById("searchid").value;
 			let fullname = document.getElementById("searchname").value;
 			if (crdnr != "" && fullname != "") {
-				xhr.open("GET", "./OV/main/status/H/search/" + crdnr + "/"
-						+ fullname);
+				xhr.open("GET", "./OV/main/search/" + crdnr + "/" + fullname
+						+ "/status/H/sort/-1");
 			} else if (crdnr == "" && fullname != "") {
-				xhr.open("GET", "./OV/main/status/H/search/" + -1 + "/"
-						+ fullname);
+				xhr.open("GET", "./OV/main/search/" + -1 + "/" + fullname
+						+ "/status/H/sort/-1");
 			} else if (crdnr != "" && fullname == "") {
-				xhr
-						.open("GET", "./OV/main/status/H/search/" + crdnr + "/"
-								+ -1);
+				xhr.open("GET", "./OV/main/search/" + crdnr + "/" + -1
+						+ "/status/H/sort/-1");
 			} else {
-				xhr.open("GET", "./OV/main/status/H/search/" + -1 + "/" + -1);
+				xhr.open("GET", "./OV/main/search/" + -1 + "/" + -1
+						+ "/status/H/sort/-1");
 			}
 			xhr.send();
 		}
