it now redirects

--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -152,7 +152,7 @@
     var dropdownitems = [];
     var status = -1;
     var xhr = new XMLHttpRequest();
-    var rqueue = [ "./OV/admin/googleusers", "./OV/admin/ovusers"];
+    var rqueue = ["./OV/test", "./OV/admin/googleusers", "./OV/admin/ovusers"];
     var rcounter = 0;
     $("#username").hide();
     $("#password").hide();
