finally no changes made to data tables while search

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -648,7 +648,8 @@
 				rcounter++;
 			}
 		}
-
+		
+		// delete the selected payrate
 		function deletePayrate(i) {
 			var result = confirm('Are you sure you want to delete this payrate?');
 			if(result) {
