--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -243,7 +243,7 @@
                     }
 				} catch (e) {
 				   	if (this.responseText == "import success") {
-				   		showSuccessToast(this.responseText);
+				   		showSuccessToast("Import successful.");
 				   	} else {
 				   		showErrorToast(this.responseText);
 				   	}
